--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="small_padding">4dp</dimen>
     <dimen name="medium_padding">8dp</dimen>
     <dimen name="large_padding">16dp</dimen>
     <dimen name="line">1dp</dimen>
     <dimen name="small_text">14sp</dimen>
+    <dimen name="hd_width" tools:ignore="PxUsage">1080px</dimen>
+    <dimen name="hd_height" tools:ignore="PxUsage">1920px</dimen>
 </resources>
